Fixed overflow issues

--- a/styles/_contact.scss
+++ b/styles/_contact.scss
@@ -1,5 +1,5 @@
 .contact__page {
-  height: 100vh;
+  max-height: 100vh;
   display: flex;
   flex-direction: column;
   .contact__main {
