--- a/styles/_skills.scss
+++ b/styles/_skills.scss
@@ -1,12 +1,3 @@
-.skills__page {
-  background-color: rgb(255, 242, 242);
-  color: black;
-}
-.header__wrapper {
-  position: sticky;
-  top: 0;
-}
-
 .softskills__intro,
 .technical__skills__intro,
 .learning__intro,
@@ -38,7 +29,8 @@
 }
 
 .learning__section,
-.softskills__section {
+.softskills__section,
+.main__skills__technical {
   height: 90vh;
   display: flex;
   flex-direction: column;
@@ -51,6 +43,35 @@
     align-items: center;
     transition: ease-in 0.5s;
     position: relative;
+    p {
+      transition: ease-in 0.2s;
+      opacity: 0;
+    }
+    &:hover {
+      background-color: rgb(119, 18, 18);
+      color: white;
+      transition: ease-in 0.5s;
+      &::before {
+        transition: ease-out 0.2s;
+        opacity: 0;
+      }
+
+      p {
+        opacity: 1;
+        transition: ease-out opacity 2s;
+      }
+    }
+    &::before {
+      content: 'content';
+      font-size: 15rem;
+      position: absolute;
+      padding-left: 10vw;
+      height: 100%;
+      width: 100%;
+      display: flex;
+      align-items: center;
+      transition: 1s;
+    }
   }
 }
 
@@ -60,48 +81,6 @@
     height: 120vh;
     display: flex;
     flex-direction: column;
-
-    &__field {
-      font-size: 4rem;
-      font-family: 'Almarena-Display-Regular';
-      flex-grow: 1;
-      display: flex;
-      justify-content: space-evenly;
-      align-items: center;
-      transition: ease-in 0.5s;
-      position: relative;
-
-      &::before {
-        content: 'content';
-        font-size: 15rem;
-        position: absolute;
-        padding-left: 10vw;
-        height: 100%;
-        width: 100%;
-        display: flex;
-        align-items: center;
-        transition: 1s;
-      }
-
-      p {
-        transition: ease-in 0.2s;
-        opacity: 0;
-      }
-      &:hover {
-        background-color: rgb(119, 18, 18);
-        color: white;
-        transition: ease-in 0.5s;
-        &::before {
-          transition: ease-out 0.2s;
-          opacity: 0;
-        }
-
-        p {
-          opacity: 1;
-          transition: ease-out opacity 2s;
-        }
-      }
-    }
   }
 }
 
@@ -119,6 +98,13 @@
 }
 .devops::before {
   content: 'DevOps →';
+}
+
+.team::before {
+  content: 'Teamwork →';
+}
+.communication::before {
+  content: 'Communication →';
 }
 
 .header__wrapper {
