--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,11 +1,14 @@
 html {
   font-size: 62.5%;
   background-color: rgb(255, 242, 242);
+  min-width: fit-content;
+  overflow-x: hidden;
 }
 html,
 body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
     Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  max-width: 100%;
 }
 
 a {
